Cree una carpeta solo para imagenes y un archivo .gitignore para los archivos swap generados por el editor

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </form>
 
     
-    <img alt="imagen" src="capterra.png"/>
+    <img alt="Imagen de la marca" src="img/capterra.png"/>
     
    
   </body>
